--- a/_style/css/main.css
+++ b/_style/css/main.css
@@ -493,13 +493,14 @@ blockquote {
   background: rgba(122, 181, 214, 0.1);
   border: 1px solid;
   border-color: #e5e5e5;
+  margin: 0;
   padding: 0.5em 5%;
   font-family: "Sentinel A", "Sentinel B", "Sentinel Book", "Georgia", Times, sans-serif;
   font-weight: 600;
   font-style: normal;
   letter-spacing: -0.5px;
-  font-size: 18px;
-  font-size: 1.125rem;
+  font-size: 17px;
+  font-size: 1.0625rem;
   line-height: 1.3em;
 }
 
@@ -1754,8 +1755,6 @@ input.button-subtle.button-progress:active,
 .button-crotchet:hover,
 .button-crotchet:focus,
 .button-crotchet:active {
-  width: 32.0%;
-  padding: 0;
   margin-left: 0;
   margin-right: 0;
 }
@@ -3386,8 +3385,8 @@ nav ul li {
 }
 
 @media (min-width: 60em) {
-  .post .post-content blockquote {
-    margin: 0 0 0 -16.7%;
+  .post-content blockquote {
+    margin-left: -43%;
   }
 }
 .post-author .profile-photo {
