--- a/_style/scss/patterns/button.scss
+++ b/_style/scss/patterns/button.scss
@@ -328,8 +328,6 @@
 .button-crotchet:hover,
 .button-crotchet:focus,
 .button-crotchet:active {
-	width: 32.0%;
-	padding: 0;
 	margin-left: 0;
 	margin-right: 0;
 	}
